--- a/python/fatcat/templates/base.html
+++ b/python/fatcat/templates/base.html
@@ -36,11 +36,11 @@
       <div class="ui simple dropdown item">
       demo-user <i class="dropdown icon"></i>
         <div class="menu">
-          <a class="item" href="/editgroup/current">Open Submissions</a>
-          <a class="item" href="/editor/demo-user/changelog">Edit History</a>
+          <a class="item" href="/editgroup/current"><i class="edit icon"></i>Edits in Progress</a>
+          <a class="item" href="/editor/demo-user/changelog"><i class="history icon"></i>History</a>
           <div class="divider"></div>
-          <a class="item" href="/editor/demo-user">Account</a>
-          <a class="item" href="/logout">Logout</a>
+          <a class="item" href="/editor/demo-user"><i class="user icon"></i>Account</a>
+          <a class="item" href="/logout"><i class="sign out icon"></i>Logout</a>
         </div>
       </div>
 
@@ -48,8 +48,13 @@
   </div>
 </header>
 
-<main class="ui main text container" style="margin-top: 4em; margin-bottom: 2em;">
-{% block body %}Nothing to see here.{% endblock %}
+<!-- 4em top margin is "enough" -->
+<main class="ui main container" style="margin-top: 6em; margin-bottom: 2em;">
+{% block fullbody %}
+  <div class="ui container text">
+    {% block body %}Nothing to see here.{% endblock %}
+  </div>
+{% endblock %}
 </main>
 
 
