--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
+<div class="ui container text">
 
 <h1>Welcome to fatcat!</h1>
 
@@ -13,27 +14,35 @@ URLs), a <a href="https://api.fatcat.wiki">documented API</a>, and work/release
 indexing (aka, linking together of pre-prints and final copies).
 <a href="/about">Read more...</a>
 
-<table>
+<br><br>
+
+<table class="ui single line table">
+<thead>
+<tr><th>Entity
+    <th>Actions
+    <th>Examples
+</thead>
 <tr><td><b>Container</b>
     <td><a href="/container/create">Create</a>
-    <td>Example <a href="/container/00000000-0000-0000-1111-000000000002">Fake</a>
-    <a href="/container/00000000-0000-0000-1111-000000000003">Real</a>
+    <td><a href="/container/00000000-0000-0000-1111-000000000002">Fake</a>
+        <br><a href="/container/00000000-0000-0000-1111-000000000003">Real</a>
 <tr><td><b>Creator</b>
     <td><a href="/creator/create">Create</a>
-    <td>Example <a href="/creator/00000000-0000-0000-2222-000000000002">Fake</a>
-    <a href="/creator/00000000-0000-0000-2222-000000000003">Real</a>
+    <td><a href="/creator/00000000-0000-0000-2222-000000000002">Fake</a>
+        <br><a href="/creator/00000000-0000-0000-2222-000000000003">Real</a>
 <tr><td><b>File</b>
     <td><a href="/file/create">Create</a>
-    <td>Example <a href="/file/00000000-0000-0000-3333-000000000002">Fake</a>
-    <a href="/file/00000000-0000-0000-3333-000000000003">Real</a>
+    <td><a href="/file/00000000-0000-0000-3333-000000000002">Fake</a>
+        <br><a href="/file/00000000-0000-0000-3333-000000000003">Real</a>
 <tr><td><b>Release</b>
     <td><a href="/release/create">Create</a>
-    <td>Example <a href="/release/00000000-0000-0000-4444-000000000002">Fake</a>
-    <a href="/release/00000000-0000-0000-4444-000000000003">Real</a>
+    <td><a href="/release/00000000-0000-0000-4444-000000000002">Fake</a>
+        <br><a href="/release/00000000-0000-0000-4444-000000000003">Real</a>
 <tr><td><b>Work</b>
     <td><a href="/work/create">Create</a>
-    <td>Example <a href="/work/00000000-0000-0000-5555-000000000002">Fake</a>
-    <a href="/work/00000000-0000-0000-5555-000000000003">Real</a>
+    <td><a href="/work/00000000-0000-0000-5555-000000000002">Fake</a>
+        <br><a href="/work/00000000-0000-0000-5555-000000000003">Real</a>
 </table>
 
+</div>
 {% endblock %}
