--- a/python/fatcat/templates/editor_view.html
+++ b/python/fatcat/templates/editor_view.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}
 {% block body %}
 
-<h1>Editor: {{ editor.username }}</h1>
+<h1 class="ui header">{{ editor.username }}
+<div class="sub header">
+  <code>editor {{ editor.id }}</code>
+</div>
+</h1>
 
 <p>Is Admin? {{ editor.is_admin }}
 <p><a href="/editor/{{ editor.username }}/changelog">Changelog</a>
