--- a/python/fatcat/templates/home.html
+++ b/python/fatcat/templates/home.html
@@ -27,11 +27,11 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><a href="/container/00000000-0000-0000-1111-000000000002">Fake</a>
         <br><a href="/container/00000000-0000-0000-1111-000000000003">Real</a>
 <tr><td><b>Creator</b>
-    <td><a href="/creator/create">Create</a>
+    <td><!-- <a href="/creator/create">Create</a> -->
     <td><a href="/creator/00000000-0000-0000-2222-000000000002">Fake</a>
         <br><a href="/creator/00000000-0000-0000-2222-000000000003">Real</a>
 <tr><td><b>File</b>
-    <td><a href="/file/create">Create</a>
+    <td>
     <td><a href="/file/00000000-0000-0000-3333-000000000002">Fake</a>
         <br><a href="/file/00000000-0000-0000-3333-000000000003">Real</a>
 <tr><td><b>Release</b>
@@ -39,7 +39,7 @@ indexing (aka, linking together of pre-prints and final copies).
     <td><a href="/release/00000000-0000-0000-4444-000000000002">Fake</a>
         <br><a href="/release/00000000-0000-0000-4444-000000000003">Real</a>
 <tr><td><b>Work</b>
-    <td><a href="/work/create">Create</a>
+    <td>
     <td><a href="/work/00000000-0000-0000-5555-000000000002">Fake</a>
         <br><a href="/work/00000000-0000-0000-5555-000000000003">Real</a>
 </table>
