changelog is limited

--- a/python/fatcat/templates/changelog.html
+++ b/python/fatcat/templates/changelog.html
@@ -4,6 +4,8 @@
 <h1 class="ui header">Recent Changes
 <div class="sub header"><code>changelog</code></div></h1>
 
+Limited to the most recent ~50 entries.
+
 <table class="ui table">
   <thead><tr><th>Changelog<br>Index
              <th>Timestamp (UTC)
