extra json as code, not pre

--- a/python/fatcat/templates/file_view.html
+++ b/python/fatcat/templates/file_view.html
@@ -15,7 +15,7 @@
 
 {% if file.extra != None %}
 <p><b>Additional Metadata (raw JSON):</b>
-<pre>{{ file.extra }}</pre>
+<code>{{ file.extra }}</code>
 {% endif %}
 
 <h3>Releases</h3>
