--- a/python/fatcat/templates/release_view.html
+++ b/python/fatcat/templates/release_view.html
@@ -57,7 +57,7 @@ linked to the same work.
 
 {% if release.extra != None %}
 <p><b>Additional Metadata (raw JSON):</b>
-<pre>{{ release.extra }}</pre>
+<code>{{ release.extra }}</code>
 {% endif %}
 
 <!--
